fixing overflow on chrome; adding random blobs; improving stats link; moving search hint to home.tsx

--- a/src/components/background/background.module.css
+++ b/src/components/background/background.module.css
@@ -3,7 +3,7 @@
     /* min-height: 100svh; */
     height: auto;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: visible;
     overflow-x: auto;
     /* overflow: hidden; */
     background: #0b0c10;
@@ -39,16 +39,25 @@
     pointer-events: none;border-radius: 9999px;
 }
 
-.blob1 {
+/* .blob1 {
     left: -40rem;
     top: -40rem;
     width: 55rem;
     height: 55rem;
+} */
+
+.blob1 {
+    /* left: 50%;
+    top: 20%; */
+    transform: translateX(-50%);
+    width: 80rem;
+    height: 20rem;
+    z-index: 1;
 }
 
 .blob2 {
-    right: 0rem;
-    top: 20%;
+    /* right: 0rem;
+    top: 20%; */
     width: 45rem;
     height: 45rem;
 }
@@ -79,7 +88,7 @@
 }
 
 .hint {
-    margin-top: 1.5rem;
+    /* margin-top: 1.5rem; */
     font-size: 0.9rem;
     color: rgba(255,255,255,.7);
 }
