--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -31,7 +31,7 @@
 }
 
 .hint {
-    margin-top: 1.5rem;
+    /* margin-top: 1.5rem; */
     font-size: 0.9rem;
     color: rgba(255,255,255,.7);
 }
